[gd_scene load_steps=14 format=3 uid="uid://bdqkofce3ywa5"]

[ext_resource type="Texture2D" uid="uid://d4cpnwnpbbyg0" path="res://Scenary/Texture/Grit_0.5k.png" id="1_hr11t"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_ww46t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wdc53"]
height = 1.8

[sub_resource type="SystemFont" id="SystemFont_pijkw"]
font_names = PackedStringArray("DejaVu Sans Mono")
font_italic = true
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_pb1ow"]
font = SubResource("SystemFont_pijkw")
font_size = 21
font_color = Color(1, 0.965634, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hwupr"]
albedo_texture = ExtResource("1_hr11t")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ymqsl"]
height = 1.8
radial_segments = 32
rings = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oywvw"]
albedo_color = Color(1, 0, 0.0166664, 1)

[sub_resource type="BoxMesh" id="BoxMesh_tgq5f"]
material = SubResource("StandardMaterial3D_oywvw")
size = Vector3(0.7, 0.4, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_nk1qc"]
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_euff5"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_l3d7q"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_8p4qg"]
properties/0/path = NodePath("Cuerpo:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:Bullet")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:Gun")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:gravity")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Camara_Ctrl:position")
properties/5/spawn = true
properties/5/replication_mode = 1

[node name="player" type="CharacterBody3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_ww46t")

[node name="Colicion" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.901463, 0)
shape = SubResource("CapsuleShape3D_wdc53")

[node name="Estado" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Estado"]
layout_mode = 2
offset_left = 24.0
offset_top = 16.0
offset_right = 1152.0
offset_bottom = 41.0
text = "Debug"
label_settings = SubResource("LabelSettings_pb1ow")

[node name="Label2" type="Label" parent="Estado"]
layout_mode = 2
offset_left = 24.0
offset_top = 45.0
offset_right = 1152.0
offset_bottom = 70.0
text = "Debug"
label_settings = SubResource("LabelSettings_pb1ow")

[node name="Label3" type="Label" parent="Estado"]
layout_mode = 2
offset_left = 24.0
offset_top = 74.0
offset_right = 1152.0
offset_bottom = 99.0
text = "Debug"
label_settings = SubResource("LabelSettings_pb1ow")

[node name="Label4" type="Label" parent="Estado"]
layout_mode = 2
offset_left = 24.0
offset_top = 103.0
offset_right = 1152.0
offset_bottom = 128.0
text = "Debug"
label_settings = SubResource("LabelSettings_pb1ow")

[node name="Label5" type="Label" parent="Estado"]
layout_mode = 2
offset_left = 24.0
offset_top = 132.0
offset_right = 1152.0
offset_bottom = 157.0
text = "Debug"
label_settings = SubResource("LabelSettings_pb1ow")

[node name="Label6" type="Label" parent="Estado"]
layout_mode = 2
offset_left = 24.0
offset_top = 168.0
offset_right = 1152.0
offset_bottom = 198.0
text = "Debug"
label_settings = SubResource("LabelSettings_pb1ow")

[node name="W" type="ColorRect" parent="Estado"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 320.0
offset_top = 16.0
offset_right = 370.0
offset_bottom = 56.0
grow_horizontal = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Estado/W"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "W"
horizontal_alignment = 1
vertical_alignment = 1

[node name="A" type="ColorRect" parent="Estado"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 256.0
offset_top = 72.0
offset_right = 306.0
offset_bottom = 112.0
grow_horizontal = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Estado/A"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="D" type="ColorRect" parent="Estado"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 384.0
offset_top = 72.0
offset_right = 434.0
offset_bottom = 112.0
grow_horizontal = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Estado/D"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="S" type="ColorRect" parent="Estado"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 320.0
offset_top = 72.0
offset_right = 370.0
offset_bottom = 112.0
grow_horizontal = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Estado/S"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="C" type="ColorRect" parent="Estado"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_top = 64.0
offset_right = 96.0
offset_bottom = 104.0
grow_horizontal = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Estado/C"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Disparo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space" type="ColorRect" parent="Estado"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 472.0
offset_top = 72.0
offset_right = 552.0
offset_bottom = 112.0
grow_horizontal = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Estado/Space"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="T" type="ColorRect" parent="Estado"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_top = 16.0
offset_right = 96.0
offset_bottom = 56.0
grow_horizontal = 2
color = Color(0, 1, 0, 1)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Estado/T"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Combat mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cuerpo" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
material_override = SubResource("StandardMaterial3D_hwupr")
mesh = SubResource("CapsuleMesh_ymqsl")

[node name="cara" type="MeshInstance3D" parent="Cuerpo"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.514537, -0.381351)
mesh = SubResource("BoxMesh_tgq5f")
skeleton = NodePath("../..")

[node name="Gun" type="Node3D" parent="Cuerpo/cara"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.731015, -0.000491977, 3.19537e-08)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cuerpo/cara/Gun"]
mesh = SubResource("BoxMesh_nk1qc")
surface_material_override/0 = SubResource("StandardMaterial3D_euff5")

[node name="Camara_Ctrl" type="Node3D" parent="."]

[node name="RadioVector" type="Node3D" parent="Camara_Ctrl"]

[node name="Camera3D" type="Camera3D" parent="Camara_Ctrl"]
transform = Transform3D(1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 8, 2.815)
far = 100.0

[node name="Origin_poitn" type="Node3D" parent="."]

[node name="direction_bullet" type="Node3D" parent="Origin_poitn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Origin_poitn/direction_bullet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("BoxMesh_l3d7q")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_8p4qg")
